# desafio-rust

./: .env  .gitignore  ActixWeb.toml  Cargo.toml  README.md  cargo_debug-lldb.sh  cargo_debugger-gdb.sh  cargo_watch.sh  clientes.json
aulas/02 - tratamento_de_strings/: Cargo.toml
aulas/21 - Enuns/: enum_com_struct.rs  enum_com_tupla.rs  enum_com_valor_string.rs  enum_complexo.rs  enum_generics.rs  enum_simples.rs  enum_simples_fisica_juridica.rs
aulas/22 - Hashmap/: basico.rs  hashmap_struct.rs
aulas/23 - Struct/: basico.rs  struct_com_metodos.rs
aulas/25 - persistencia_mysql/: env.sh.sample  migrate.sh  start.sh
aulas/26 - tratamento_de_erro/: Cargo.toml
aulas/28 - polimorfismo_e_observer/: Cargo.toml
aulas/29 - Generics/: Cargo.toml
aulas/30 - ORM_criar_tabela/: Cargo.toml
aulas/32 - Completando_crud_orm/: Cargo.toml
aulas/33 - Metaprogramacao_macro_rule/: Cargo.toml
aulas/34 - Macro_com_crate_externa_e_decorator/: Cargo.toml
aulas/35 - Macro_derive/: Cargo.toml
aulas/36 - Implementacao_macro_orm_p1/: Cargo.toml  env.sh.sample
aulas/37 - Completando_orm_com_crate/: Cargo.toml
aulas/38 - App_console_com_orm/: start.sh
aulas/41 - Diesel_ORM_mysql/: Cargo.toml  README.md
aulas/42 - Sqlx_ORM_mysql/: .env  Cargo.toml  README.md
aulas/43 - Diesel_ORM_postgres/: .env  Cargo.toml
aulas/44 - Sqlx_ORM_postgres/: .env  Cargo.toml  README.md
aulas/45 - Sqlite_com_rust/: Cargo.toml
aulas/46 - mongodb_rust/: Cargo.toml
aulas/47 - redis_com_rust/: Cargo.toml
aulas/49 - Criando_crate/usando_crete_app_rust/: Cargo.toml
aulas/49 - Criando_crate/usando_crete_app_rust/src/: main.rs
aulas/49 - Criando_crate/validador_cpf/: Cargo.toml  README.md
aulas/49 - Criando_crate/validador_cpf/src/: lib.rs
aulas/66 - ActixWeb_API_completa/: Cargo.toml
aulas/67 - testes/test_comportamento/: Cargo.toml
aulas/67 - testes/test_comportamento/src/: main.rs
aulas/67 - testes/test_comportamento/tests/features/: example.feature
aulas/67 - testes/testes_request/: Cargo.toml
aulas/67 - testes/testes_request/src/: main.rs  models.rs  validar_cnpj.rs
aulas/67 - testes/testes_request/tests/: test_request.rs
db/: alunos.json
migrations/: 001.sql
src/: config.rs  cria_struct.rs  entidades.rs  handlers.rs  logica_negocio.rs  main.rs  middleware.rs  models.rs  services.rs  tela.rs
src/dtos/: mod.rs  (+1 more)
(+280 files in other folders)
