[package]
name = "console"
version = "0.1.0"
edition = "2021"

[dependencies]
orm_desafio_v1 = { path = "./orm_desafio_v1"}
actix-web = "4.5.1"
actix-service = "2.0"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
jsonwebtoken = "7.2.0"
bcrypt = "0.8.2"
futures = "0.3"
actix-cors = "0.6"